--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -88,9 +88,11 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = monospace;1
+font-1 = WeatherIcons:size=17
+font-3 = MaterialIcons:size=19
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio date
+modules-right = weather
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -156,10 +158,10 @@ label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.secondary}
 
-[module/openweathermap-fullfeatured]
+[module/weather]
 type = custom/script
-exec = ~/.config/polybar/scripts/openweathermap-fullfeatured.sh
-interval = 600
+exec = busctl --user -j get-property io.ntfd /weather openweathermap.strings RenderedTemplate | jq -r .data
+interval = 60
 label-font = 3
 
 [module/memory]
